# rust

./: Cargo.toml
my_firts_lib/: Cargo.toml
my_firts_lib/src/: lib.rs
src/: main  main.rs  second.rs
